Fixed bug in displaying the diagram block on mobile devices

--- a/static/messages.css
+++ b/static/messages.css
@@ -454,7 +454,6 @@ body.dark-theme .chat-input-area {
   transition: background 0.3s;
   text-align: center;
   font-weight: bold;
-  font-width: 0.8rem;
   font-size: 1.5rem;
   width: 35px;
   padding-left: 10px;
@@ -1639,15 +1638,15 @@ dialog::backdrop {
   }
 
   #diagramDlg {
-    width: 100dvh;
-    height: 100dvw;
-    max-height: 100dvw !important;
+    width: 96dvh;
+    height: 90dvw;
+    max-height: 90dvw !important;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(90deg);
     margin: 0;
-    max-width: none;
+    max-width: 96dvh;
     border: none;
     box-sizing: border-box;
   }
@@ -1655,7 +1654,7 @@ dialog::backdrop {
   #diagramDlg .mobile-flex {
     display: flex !important;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
     height: 100%;
     box-sizing: border-box;
   }
@@ -1664,10 +1663,10 @@ dialog::backdrop {
     max-width: 100%;
     min-width: 0;
     min-height: 0;
-    max-height: calc(100% - 50px);
+    max-height: calc(100% - 70px);
     /* Leave room for button */
     flex: 1;
-    margin-bottom: 10px;
+    margin-bottom: 4px;
   }
 
   #close_diagram_btn {
